Fixes section headers on small screen sizes

--- a/src/containers/Layout/index.css
+++ b/src/containers/Layout/index.css
@@ -153,12 +153,15 @@
   .text {
     margin-right: 1.75vh; 
   } 
+  .sectionHeader {
+    font-size: 7vmin;
+  }
 }
 
 /* Small laptop/desktop/tablet screen sizing */
-@media only screen (max-width: 700px) {
+@media only screen and (max-width: 600px) {
   .sectionHeader {
-    font-size: 5vmin;
+    font-size: 7vmin;
   }
 }
 
